@@ -178,7 +178,7 @@ void openDisk(GtkIconView *icon_view,GtkTreePath *tree_path,gpointer *userdata)
 	gtk_tree_model_get_iter(GTK_TREE_MODEL(diskList),&iter,tree_path);
 	gtk_tree_model_get(GTK_TREE_MODEL(diskList),&iter,DEVPATH,&path,MOUNTPATH,&mountpoint,-1);
 
-	if(mountpoint==NULL)
+	if((mountpoint==NULL) ||(strcmp(mountpoint,"…")==0))
 		{
 			asprintf(&command,"udevil mount /dev/%s",path);
 			system(command);
@@ -323,5 +323,12 @@ void closeTab(GtkButton *button,pageStruct *page)
 
 void setPrefs(GtkWidget* widget,gpointer ptr)
 {
+	gtk_widget_destroy(prefsWindow);
 	printf(">>%i<<\n",(int)(long)ptr);
+}
+
+void doShutdown(GtkWidget* widget,gpointer data)
+{
+	writeExitData();
+	gtk_main_quit();
 }
