@@ -42,7 +42,7 @@ struct	contextStruct
 	unsigned	id;
 };
 
-enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,MAINFILENEW};
+enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,MAINFILENEW,MAINFILEPREFS,MAINFILEQUIT};
 
 extern	menuDataStruct	menuData[];
 extern	contextStruct	**contextMenus;
