@@ -1,4 +1,5 @@
 0.0.3
+Saves window position/size on exit.
 Started menu bar.
 Started prefs.
 Shows and mounts disk according to diskIncludePattern and diskExcludePattern ( to be set in prefs when done ).
